--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 <h2>Source</h2>
 <ol>
     <li>
-        <a href="http://pexels.com" target="_blank"> <h3>Pexels</h3> </a>
+        <a href="http://pexels.com" target="_blank"> <p>Pexels</p> </a>
     </li>
     <li>
-        <a href="http://pixabay.com" target="_blank"> <h3>Pixabay</h3> </a>
+        <a href="http://pixabay.com" target="_blank"> <p>Pixabay</p> </a>
     </li>
 </ol>
     </body>
