--- a/table_form/index.html
+++ b/table_form/index.html
@@ -75,7 +75,7 @@
     <br><br>
 
     <h2><u>2.FORM</u></h2>
-    <b>お問い合わせ</b>
+    <b>お問い合わせ</b><br>
     <form>
         <label>お名前 [必須]:</label> <input type="text"><br><br>
         <label>メールアドレス [必須]:</label> <input type="email"><br><br>
