--- a/table_form/index.html
+++ b/table_form/index.html
@@ -79,7 +79,7 @@
     <form>
         <label>お名前 [必須]:</label> <input type="text"><br><br>
         <label>メールアドレス [必須]:</label> <input type="email"><br><br>
-        <label>電話番号[任意]:</label> <input type="number"><br><br>
+        <label>電話番号[任意]:</label> <input type="tel"><br><br>
         <label>ご用件 [必須]:</label> 
             <select>
                 <option>書籍についてのご質問(個人のお客様)</option>
