--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <title>Latihan</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <a href="xyz_zoo/index.html" target="_blank"><h1>XYZ Zoo</h1></a>
+        <header>
+            <span>Latihan HTML</span>
+        </header>
+        <a href="xyz_zoo/index.html" target="_blank" class="tombol"><h2>XYZ Zoo</h2></a>
         <br>
-        <br>
-        <a href="table_form/index.html" target="_blank"><h1>Table and Form</h1></a>
+        <a href="table_form/index.html" target="_blank" class="tombol"><h2>Table and Form</h2></a>
     </body>
+
 </html>
